@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="net.rieter.xot.channel.nos"
-       version="4.1.7.1"
+       version="4.1.7.2"
        name="Retrospect Dutch NOS Channels"
        provider-name="Bas Rieter">
 
